force-app/main/default/objects/Opportunity/fields/Additional_Liquidated_Damages__c.field-meta.xml
<CustomField>
    <fullName>Additional_Liquidated_Damages__c</fullName>
    <label>Additional Liquidated Damages</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>