force-app/main/default/objects/Opportunity/fields/Adjuster_1_5_Billing_Rate__c.field-meta.xml
<CustomField>
    <fullName>Adjuster_1_5_Billing_Rate__c</fullName>
    <description>Adjuster billing rate when on 1.5x overtime rate</description>
    <label>Adjuster 1.5x Billing Rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>