force-app/main/default/objects/Opportunity/fields/Adjuster_Double_Billing_Rate__c.field-meta.xml
<CustomField>
    <fullName>Adjuster_Double_Billing_Rate__c</fullName>
    <description>Adjuster billing rate when on double overtime Sundays and Holidays</description>
    <label>Adjuster 2.0x Billing Rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>