force-app/main/default/objects/Opportunity/fields/Adjuster_Standard_Rate__c.field-meta.xml
<CustomField>
    <fullName>Adjuster_Standard_Rate__c</fullName>
    <description>Adjuster billing rate when in normal business hours</description>
    <label>Adjuster Standard Rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>