force-app/main/default/objects/Opportunity/fields/Annual_test_covered__c.field-meta.xml
<CustomField>
    <fullName>Annual_test_covered__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does vendor contract include Annual Test?</inlineHelpText>
    <label>Annual test covered</label>
    <type>Checkbox</type>
</CustomField>