force-app/main/default/objects/Opportunity/fields/Annual_test_date__c.field-meta.xml
<CustomField>
    <fullName>Annual_test_date__c</fullName>
    <label>Annual test date</label>
    <type>Date</type>
</CustomField>