force-app/main/default/objects/Opportunity/fields/Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Billing_Frequency__c</fullName>
    <description>Annual</description>
    <label>Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Controller_Type</valueSetName>
    </valueSet>
</CustomField>