force-app/main/default/objects/Opportunity/fields/Bonus_Time_Only__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Time_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box if contract states covered repairs will be charged bonus time only on overtime. For example, if it is 1.7x OT customer will be charged .7x only.</description>
    <inlineHelpText>Check box if contract states covered repairs will be charged bonus time only on overtime. For example, if it is 1.7x OT customer will be charged .7x only.</inlineHelpText>
    <label>Bonus Time Only</label>
    <type>Checkbox</type>
</CustomField>