force-app/main/default/objects/Opportunity/fields/Call_Back_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Call_Back_Coverage__c</fullName>
    <label>Call Back Coverage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>24 Hours</fullName>
            </value>
            <value>
                <fullName>No Coverage</fullName>
            </value>
            <value>
                <fullName>Regular Business Hours - BTO</fullName>
            </value>
            <value>
                <fullName>Regular Business Hours - Defined</fullName>
            </value>
            <value>
                <fullName>Regular Business Hours - Undefined</fullName>
            </value>
            <value>
                <fullName>Regular Business Hours with Conditions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>