force-app/main/default/objects/Opportunity/fields/Call_Back_Hours_Available__c.field-meta.xml
<CustomField>
    <fullName>Call_Back_Hours_Available__c</fullName>
    <description>Hours available to the customer to request service.</description>
    <inlineHelpText>Hours available to the customer to request service.</inlineHelpText>
    <label>Call Back Hours Available</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>24/7</fullName>
            </value>
            <value>
                <fullName>24/7-OT Billing Rates Apply</fullName>
            </value>
            <value>
                <fullName>Normal Business Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>