force-app/main/default/objects/Opportunity/fields/Call_Back_Included_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Call_Back_Included_End_Time__c</fullName>
    <description>Call backs included at no additional charge for covered repair items</description>
    <label>Call Back Included End Time</label>
    <type>Time</type>
</CustomField>