force-app/main/default/objects/Opportunity/fields/Call_Back_Included_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Call_Back_Included_Start_Time__c</fullName>
    <description>Call back included at no additional cost for covered repairs</description>
    <label>Call Back Included Start Time</label>
    <type>Time</type>
</CustomField>