force-app/main/default/objects/Opportunity/fields/Cancelation_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Cancelation_Requirement__c</fullName>
    <label>Cancelation Requirement</label>
    <length>250</length>
    <type>Text</type>
</CustomField>