force-app/main/default/objects/Opportunity/fields/Cancelation_window_end__c.field-meta.xml
<CustomField>
    <fullName>Cancelation_window_end__c</fullName>
    <inlineHelpText>Min. number of days prior to expiration date that client may request not to renew their contract with vendor</inlineHelpText>
    <label>Cancelation Window End</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>