force-app/main/default/objects/Opportunity/fields/Cancelation_window_end_date__c.field-meta.xml
<CustomField>
    <fullName>Cancelation_window_end_date__c</fullName>
    <description>Calculated last date that the client can request not to renew their contract with vendor</description>
    <formula>Expiration_date__c -  Cancelation_window_end__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated last date that the client can request not to renew their contract with vendor</inlineHelpText>
    <label>Cancelation Window End</label>
    <type>Date</type>
</CustomField>