force-app/main/default/objects/Opportunity/fields/cancelation_window_start_date__c.field-meta.xml
<CustomField>
    <fullName>cancelation_window_start_date__c</fullName>
    <description>Calculated first date that the client can request not to renew their contract with vendor</description>
    <formula>Expiration_date__c -  Expiration_window_start__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated first date that the client can request not to renew their contract with vendor</inlineHelpText>
    <label>Cancelation Window Start</label>
    <type>Date</type>
</CustomField>