force-app/main/default/objects/Opportunity/fields/Cleandown_Covered__c.field-meta.xml
<CustomField>
    <fullName>Cleandown_Covered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if cleandowns are included in the contract</description>
    <inlineHelpText>Check if cleandown is included in contract.</inlineHelpText>
    <label>Cleandown Covered</label>
    <type>Checkbox</type>
</CustomField>