force-app/main/default/objects/Opportunity/fields/Commitment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Terms__c</fullName>
    <label>Commitment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Unit</fullName>
            </value>
            <value>
                <fullName>Per Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>