force-app/main/default/objects/Opportunity/fields/Contract_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Contract_Renewal__c</fullName>
    <description>Auto-renewal language in contract will be found in term section.</description>
    <inlineHelpText>Auto-renewal language in contract will be found in term section.</inlineHelpText>
    <label>Contract Renewal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto-renews into similar subsequent terms</fullName>
            </value>
            <value>
                <fullName>Auto-renews into annual term</fullName>
            </value>
            <value>
                <fullName>Auto-renews into monthly term</fullName>
            </value>
            <value>
                <fullName>Does not auto-renew</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>