force-app/main/default/objects/Opportunity/fields/Coverage_end_time__c.field-meta.xml
<CustomField>
    <fullName>Coverage_end_time__c</fullName>
    <inlineHelpText>Time coverage ends</inlineHelpText>
    <label>Coverage end time</label>
    <type>Time</type>
</CustomField>