force-app/main/default/objects/Opportunity/fields/Coverage_Hours__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Hours__c</fullName>
    <inlineHelpText>When services are available to the customer - including maintenance, testing, call backs and repairs.</inlineHelpText>
    <label>Coverage Hours</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular Business Hours - Defined</fullName>
            </value>
            <value>
                <fullName>Regular Business Hours - Undefined</fullName>
            </value>
            <value>
                <fullName>24/7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>