force-app/main/default/objects/Opportunity/fields/Coverage_start_time__c.field-meta.xml
<CustomField>
    <fullName>Coverage_start_time__c</fullName>
    <inlineHelpText>Time coverage begins</inlineHelpText>
    <label>Coverage start time</label>
    <type>Time</type>
</CustomField>