force-app/main/default/objects/Opportunity/fields/CoverageHours__c.field-meta.xml
<CustomField>
    <fullName>CoverageHours__c</fullName>
    <description>IF( MOD( HOUR(Coverage_end_time__c ) - HOUR(Coverage_start_time__c), 24 ) &lt; 1, &quot;&quot;, TEXT( MOD( HOUR(Coverage_end_time__c ) - HOUR(Coverage_start_time__c), 24 ) ) &amp; 
IF((MOD( HOUR(Coverage_end_time__c ) - HOUR(Coverage_start_time__c), 24 )) = 1, &quot; HR &quot;, &quot; HRS &quot; ) ) 
&amp; IF( (ROUND( MOD( Minute(Coverage_end_time__c ) - Minute(Coverage_start_time__c), 60 ), 0 )) = 0, &quot;&quot;, TEXT( ROUND( MOD( Minute(Coverage_end_time__c ) - Minute(Coverage_start_time__c), 60 ), 0 ) ) &amp; &quot; MINS&quot; )</description>
    <formula>TEXT(Coverage_Hours__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CoverageHours</label>
    <type>Text</type>
</CustomField>