force-app/main/default/objects/Opportunity/fields/Covered_Excluded_Item_Notes__c.field-meta.xml
<CustomField>
    <fullName>Covered_Excluded_Item_Notes__c</fullName>
    <label>Covered/Excluded Item Notes</label>
    <type>TextArea</type>
</CustomField>