force-app/main/default/objects/Opportunity/fields/Crew_1_7_Billing_Rate__c.field-meta.xml
<CustomField>
    <fullName>Crew_1_7_Billing_Rate__c</fullName>
    <description>Crew is mechanic and helper/mechanic and mechanic on 1.7x overtime</description>
    <label>Crew 1.7x Billing Rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>