force-app/main/default/objects/Opportunity/fields/Crew_Double_Billing_Rate__c.field-meta.xml
<CustomField>
    <fullName>Crew_Double_Billing_Rate__c</fullName>
    <description>Crew is mechanic and helper/mechanic and mechanic on 2x overtime(Sunday &amp; Holiday)</description>
    <label>Crew 2x Billing Rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>