force-app/main/default/objects/Opportunity/fields/Crew_Standard_Rate__c.field-meta.xml
<CustomField>
    <fullName>Crew_Standard_Rate__c</fullName>
    <description>Crew is mechanic and helper/mechanic and mechanic during normal business hours.</description>
    <label>Crew Standard Rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>