force-app/main/default/objects/Opportunity/fields/Cure_Clause_Language__c.field-meta.xml
<CustomField>
    <fullName>Cure_Clause_Language__c</fullName>
    <label>Cure Clause Language</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>