force-app/main/default/objects/Opportunity/fields/Cure_Clause_present__c.field-meta.xml
<CustomField>
    <fullName>Cure_Clause_present__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does vendor contract include cure clause?</inlineHelpText>
    <label>Cure Clause present</label>
    <type>Checkbox</type>
</CustomField>