force-app/main/default/objects/Opportunity/fields/Cure_Clause_terms_days__c.field-meta.xml
<CustomField>
    <fullName>Cure_Clause_terms_days__c</fullName>
    <label>Cure Clause terms (days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>