force-app/main/default/objects/Opportunity/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <description>Elevator company&apos;s customer number</description>
    <label>Elevator Vendor&apos;s Customer Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>