force-app/main/default/objects/Opportunity/fields/Days_Prior_to_Testing_for_Notification__c.field-meta.xml
<CustomField>
    <fullName>Days_Prior_to_Testing_for_Notification__c</fullName>
    <label>Days Prior to Testing for Notification</label>
    <length>2</length>
    <type>Text</type>
</CustomField>