force-app/main/default/objects/Opportunity/fields/Days_to_Provide_Testing_Completion__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Provide_Testing_Completion__c</fullName>
    <label>Days to Provide Testing Completion</label>
    <length>2</length>
    <type>Text</type>
</CustomField>