force-app/main/default/objects/Opportunity/fields/Describe_your_vendor_in_one_word__c.field-meta.xml
<CustomField>
    <fullName>Describe_your_vendor_in_one_word__c</fullName>
    <label>Describe your vendor in one word</label>
    <length>50</length>
    <type>Text</type>
</CustomField>