force-app/main/default/objects/Opportunity/fields/Describe_your_VT_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Describe_your_VT_Portfolio__c</fullName>
    <label>Describe your VT Portfolio</label>
    <type>TextArea</type>
</CustomField>