force-app/main/default/objects/Opportunity/fields/Elevator_maintenance_price__c.field-meta.xml
<CustomField>
    <fullName>Elevator_maintenance_price__c</fullName>
    <inlineHelpText>Enter the Monthly Rate</inlineHelpText>
    <label>Elevator maintenance price</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>