force-app/main/default/objects/Opportunity/fields/Excluded_Items__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Items__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Excluded Items</label>
    <type>Checkbox</type>
</CustomField>