force-app/main/default/objects/Opportunity/fields/Expiration_date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_date__c</fullName>
    <inlineHelpText>End date of contract between the Elevator Vendor and their client.</inlineHelpText>
    <label>Expiration date</label>
    <type>Date</type>
</CustomField>