force-app/main/default/objects/Opportunity/fields/Expiration_window_start__c.field-meta.xml
<CustomField>
    <fullName>Expiration_window_start__c</fullName>
    <inlineHelpText>Max. number of days prior to expiration date that client may request not to renew their contract with vendor</inlineHelpText>
    <label>Expiration window start</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>