force-app/main/default/objects/Opportunity/fields/Frequency_of_service__c.field-meta.xml
<CustomField>
    <fullName>Frequency_of_service__c</fullName>
    <label>Frequency of service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>Bi-Annually</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Periodically</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>