force-app/main/default/objects/Opportunity/fields/Helper_1_7_Billing_Rate__c.field-meta.xml
<CustomField>
    <fullName>Helper_1_7_Billing_Rate__c</fullName>
    <description>Helper rate on 1.7x overtime.</description>
    <label>Helper 1.7x Billing Rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>