force-app/main/default/objects/Opportunity/fields/Helper_Double_Billing_Rate__c.field-meta.xml
<CustomField>
    <fullName>Helper_Double_Billing_Rate__c</fullName>
    <description>Helper rate on 2x overtime (Sunday &amp; Holiday)</description>
    <label>Helper 2x Billing Rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>