force-app/main/default/objects/Opportunity/fields/Helper_Standard_Billing_Rate__c.field-meta.xml
<CustomField>
    <fullName>Helper_Standard_Billing_Rate__c</fullName>
    <description>Helper rate during normal business hours.</description>
    <label>Helper Standard Billing Rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>