force-app/main/default/objects/Opportunity/fields/Hourly_requirement__c.field-meta.xml
<CustomField>
    <fullName>Hourly_requirement__c</fullName>
    <label>Hourly requirement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unspecified</fullName>
                <default>true</default>
                <label>Unspecified</label>
            </value>
            <value>
                <fullName>0 hours</fullName>
            </value>
            <value>
                <fullName>1 hour per month</fullName>
            </value>
            <value>
                <fullName>2 hours per month</fullName>
            </value>
            <value>
                <fullName>3 hours per month</fullName>
            </value>
            <value>
                <fullName>4 hours per month</fullName>
            </value>
            <value>
                <fullName>5 hours per month</fullName>
            </value>
            <value>
                <fullName>6 hours per month</fullName>
            </value>
            <value>
                <fullName>7 hour per month</fullName>
            </value>
            <value>
                <fullName>8 hours per month</fullName>
            </value>
            <value>
                <fullName>9 hours per month</fullName>
            </value>
            <value>
                <fullName>10 hours per month</fullName>
            </value>
            <value>
                <fullName>1 hour per quarter</fullName>
            </value>
            <value>
                <fullName>2 hours per quarter</fullName>
            </value>
            <value>
                <fullName>3 hours per quarter</fullName>
            </value>
            <value>
                <fullName>4 hours per quarter</fullName>
            </value>
            <value>
                <fullName>5 hours per quarter</fullName>
            </value>
            <value>
                <fullName>6 hours per quarter</fullName>
            </value>
            <value>
                <fullName>7 hour per quarter</fullName>
            </value>
            <value>
                <fullName>8 hours per quarter</fullName>
            </value>
            <value>
                <fullName>9 hours per quarter</fullName>
            </value>
            <value>
                <fullName>10 hours per quarter</fullName>
            </value>
            <value>
                <fullName>1 hour every 6 months</fullName>
            </value>
            <value>
                <fullName>2 hours every 6 months</fullName>
            </value>
            <value>
                <fullName>3 hours every 6 months</fullName>
            </value>
            <value>
                <fullName>4 hours every 6 months</fullName>
            </value>
            <value>
                <fullName>5 hours every 6 months</fullName>
            </value>
            <value>
                <fullName>6 hours every 6 months</fullName>
            </value>
            <value>
                <fullName>7 hour every 6 months</fullName>
            </value>
            <value>
                <fullName>8 hours every 6 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>