force-app/main/default/objects/Opportunity/fields/Hourly_Requirement_Escalator__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Requirement_Escalator__c</fullName>
    <label>Hourly Requirement-Escalator</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>