force-app/main/default/objects/Opportunity/fields/How_are_Invoices_Processed__c.field-meta.xml
<CustomField>
    <fullName>How_are_Invoices_Processed__c</fullName>
    <description>How are the customers invoices processed?</description>
    <label>How are Invoices Processed?</label>
    <type>TextArea</type>
</CustomField>