force-app/main/default/objects/Opportunity/fields/How_to_simplify_your_vendor_management__c.field-meta.xml
<CustomField>
    <fullName>How_to_simplify_your_vendor_management__c</fullName>
    <label>How to simplify your vendor management?</label>
    <type>TextArea</type>
</CustomField>