force-app/main/default/objects/Opportunity/fields/Index_Testing_Covered__c.field-meta.xml
<CustomField>
    <fullName>Index_Testing_Covered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if escalator index testing is covered.</description>
    <inlineHelpText>Check if escalator index testing is covered.</inlineHelpText>
    <label>Index Testing Covered</label>
    <type>Checkbox</type>
</CustomField>