force-app/main/default/objects/Opportunity/fields/LD_Callbacks_Within_30_Day_Condition__c.field-meta.xml
<CustomField>
    <fullName>LD_Callbacks_Within_30_Day_Condition__c</fullName>
    <label>LD Callbacks within 30 Day Condition</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>