force-app/main/default/objects/Opportunity/fields/LD_Callbacks_Within_30_Day_Damage_Amount__c.field-meta.xml
<CustomField>
    <fullName>LD_Callbacks_Within_30_Day_Damage_Amount__c</fullName>
    <label>LD Callbacks Within 30 Day Damage Amoun</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>