force-app/main/default/objects/Opportunity/fields/LD_Callbacks_within_30_Day_Damage_Freque__c.field-meta.xml
<CustomField>
    <fullName>LD_Callbacks_within_30_Day_Damage_Freque__c</fullName>
    <label>LD Callbacks within 30 Day Damage Freque</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Occurence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>