force-app/main/default/objects/Opportunity/fields/LD_CAT1_Days_Past_Due_Damage_Frequency__c.field-meta.xml
<CustomField>
    <fullName>LD_CAT1_Days_Past_Due_Damage_Frequency__c</fullName>
    <label>LD CAT1 Days Past Due Damage Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Occurrence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>