force-app/main/default/objects/Opportunity/fields/LD_CAT5_Days_Past_Due_Condition__c.field-meta.xml
<CustomField>
    <fullName>LD_CAT5_Days_Past_Due_Condition__c</fullName>
    <label>LD CAT5 Days Past Due Condition</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>