force-app/main/default/objects/Opportunity/fields/LD_CAT5_Days_Past_Due_Damage_Amount__c.field-meta.xml
<CustomField>
    <fullName>LD_CAT5_Days_Past_Due_Damage_Amount__c</fullName>
    <label>LD CAT5 Days Past Due  Damage Amount</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>