force-app/main/default/objects/Opportunity/fields/LD_Inspection_Damage_Frequency__c.field-meta.xml
<CustomField>
    <fullName>LD_Inspection_Damage_Frequency__c</fullName>
    <label>LD Inspection Damage Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Occurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>