force-app/main/default/objects/Opportunity/fields/LD_Response_Time_Condition__c.field-meta.xml
<CustomField>
    <fullName>LD_Response_Time_Condition__c</fullName>
    <label>LD Response Time Condition</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>