force-app/main/default/objects/Opportunity/fields/LD_Unit_OOS_Billing_Suspension__c.field-meta.xml
<CustomField>
    <fullName>LD_Unit_OOS_Billing_Suspension__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LD Unit OOS Billing Suspension</label>
    <type>Checkbox</type>
</CustomField>