force-app/main/default/objects/Opportunity/fields/LD_Unit_OOS_Damage_Amount__c.field-meta.xml
<CustomField>
    <fullName>LD_Unit_OOS_Damage_Amount__c</fullName>
    <label>LD Unit OOS Damage Amount</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>